--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -161,7 +161,7 @@ Email: info@dpbennett.com.jm
                                     <p:spacer width="30"/>                                   
 
 
-                                    <p:commandButton actionListener="#{systemManager.viewUserProfile}"                                            
+                                    <p:commandButton actionListener="#{legalDocumentManager.viewUserProfile}"                                            
                                                      update=":userProfileDialogForm"
                                                      oncomplete="PF('userProfileDialog').show();"
                                                      icon="pi pi-user"
@@ -206,8 +206,8 @@ Email: info@dpbennett.com.jm
                                 <p:divider style="margin-top: 0;"/>
 
                                 <p:accordionPanel id="dashboardAccordion" 
-                                                  value="#{legalDocumentManager.dashboard.tabs}" 
-                                                  activeIndex="#{legalDocumentManager.dashboard.tabIndex}"
+                                                  value="#{systemManager.dashboard.tabs}" 
+                                                  activeIndex="#{systemManager.dashboard.tabIndex}"
                                                   var="t"   
                                                   widgetVar="dashboardAccordionVar"
                                                   rendered="true"
@@ -217,11 +217,11 @@ Email: info@dpbennett.com.jm
                                             immediate="true"
                                             process="@this"
                                             update=":mainTabViewForm"
-                                            listener="#{legalDocumentManager.onDashboardTabChange}" />
+                                            listener="#{systemManager.onDashboardTabChange}" />
 
                                     <p:tab title="#{t.name}" >
 
-                                        <p:defaultCommand target="#{legalDocumentManager.defaultCommandTarget}" />
+                                        <p:defaultCommand target="#{systemManager.defaultCommandTarget}" />
 
                                         <h:panelGroup rendered="#{t.id == 'Legal Office'}">
                                             <ui:include src="dashboard/legal/legalDocumentTab.xhtml" />
@@ -256,9 +256,9 @@ Email: info@dpbennett.com.jm
                                         </ui:remove>
 
                                         <p:tabView id="mainTabView"  
-                                                   rendered="#{legalDocumentManager.mainTabView.render}"
-                                                   value="#{legalDocumentManager.mainTabView.tabs}" 
-                                                   activeIndex="#{legalDocumentManager.mainTabView.tabIndex}"
+                                                   rendered="#{systemManager.mainTabView.render}"
+                                                   value="#{systemManager.mainTabView.tabs}" 
+                                                   activeIndex="#{systemManager.mainTabView.tabIndex}"
                                                    var="t" 
                                                    dynamic="false"
                                                    widgetVar="mainTabViewVar">
@@ -266,17 +266,17 @@ Email: info@dpbennett.com.jm
                                             <p:ajax event="tabClose" 
                                                     immediate="true"
                                                     process="@this"
-                                                    listener="#{legalDocumentManager.onMainViewTabClose}" />  
+                                                    listener="#{systemManager.onMainViewTabClose}" />  
 
                                             <p:ajax event="tabChange" 
                                                     process="@form"      
                                                     update=":mainTabViewForm"
-                                                    listener="#{legalDocumentManager.onMainViewTabChange}" />  
+                                                    listener="#{systemManager.onMainViewTabChange}" />  
 
 
                                             <p:tab title="#{t.name}" closable="true"  >
 
-                                                <p:defaultCommand target="#{legalDocumentManager.defaultCommandTarget}" />
+                                                <p:defaultCommand target="#{systemManager.defaultCommandTarget}" />
 
                                                 <h:panelGroup rendered="#{t.id == 'Legal Documents'}">                                
                                                     <ui:include src="legal/documentBrowser.xhtml" />   
